CMAKE_MINIMUM_REQUIRED (VERSION 3.13)

SET (CMAKE_CXX_STANDARD 17)

PROJECT (vunikEngine)

SET (VUNIKENGINE_BUILD_TARGET_SHARED "vunikEngine_shared")
SET (VUNIKENGINE_BUILD_TARGET_STATIC "vunikEngine_static")

OPTION (VUNIKENGINE_BUILD_SHARED "Build the shared library" OFF)
OPTION (VUNIKENGINE_BUILD_STATIC "Build the static library" ON)
OPTION (VUNIKENGINE_BUILD_TEST "Build the test example" OFF)

ADD_SUBDIRECTORY (${CMAKE_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY (${CMAKE_SOURCE_DIR}/src)

IF (VUNIKENGINE_BUILD_TEST)
    ADD_SUBDIRECTORY (${CMAKE_SOURCE_DIR}/test)
ENDIF ()
