IF (VUNIKENGINE_BUILD_TARGET_SHARED)
    ADD_LIBRARY (${VUNIKENGINE_BUILD_TARGET_SHARED} SHARED)
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_SHARED} PUBLIC ${CMAKE_SOURCE_DIR}/include)
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_SHARED} PRIVATE ${VUNIKENGINE_EXTERNAL_LIBRARY_INCLUDES})
    TARGET_LINK_LIBRARIES (${VUNIKENGINE_BUILD_TARGET_SHARED} ${VUNIKENGINE_EXTERNAL_LIBRARY_LINKS})
ENDIF ()

IF (VUNIKENGINE_BUILD_TARGET_STATIC)
    ADD_LIBRARY (${VUNIKENGINE_BUILD_TARGET_STATIC} STATIC)
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_STATIC} PUBLIC ${CMAKE_SOURCE_DIR}/include)
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_STATIC} PRIVATE ${VUNIKENGINE_EXTERNAL_LIBRARY_INCLUDES})
    TARGET_LINK_LIBRARIES (${VUNIKENGINE_BUILD_TARGET_STATIC} ${VUNIKENGINE_EXTERNAL_LIBRARY_LINKS})
ENDIF ()

#INSTALL (DIRECTORY ${CMAKE_CURRENT_D})
