FILE (GLOB_RECURSE VUNIKENGINE_CPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

IF (VUNIKENGINE_BUILD_SHARED)
    ADD_LIBRARY (${VUNIKENGINE_BUILD_TARGET_SHARED} SHARED
        ${VUNIKENGINE_CPP_FILES}
    )
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_SHARED}
    PUBLIC
        ${VUNIKENGINE_INCLUDE_DIRS}
        ${VUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES}
    PRIVATE
        ${VUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES}
    )
    TARGET_LINK_LIBRARIES (${VUNIKENGINE_BUILD_TARGET_SHARED}
        ${VUNIKENGINE_EXTERNAL_LIBRARY_LINKS}
    )
ENDIF ()

IF (VUNIKENGINE_BUILD_STATIC)
    ADD_LIBRARY (${VUNIKENGINE_BUILD_TARGET_STATIC} STATIC
        ${VUNIKENGINE_CPP_FILES}
    )
    TARGET_INCLUDE_DIRECTORIES (${VUNIKENGINE_BUILD_TARGET_STATIC}
    PUBLIC
        ${VUNIKENGINE_INCLUDE_DIRS}
        ${VUNIKENGINE_EXTERNAL_LIBRARY_PUBLIC_INCLUDES}
    PRIVATE
        ${VUNIKENGINE_EXTERNAL_LIBRARY_PRIVATE_INCLUDES}
    )
    TARGET_LINK_LIBRARIES (${VUNIKENGINE_BUILD_TARGET_STATIC}
        ${VUNIKENGINE_EXTERNAL_LIBRARY_LINKS}
    )
ENDIF ()
